Changes to fix spacing on ipad

--- a/public/responsive/small.css
+++ b/public/responsive/small.css
@@ -90,7 +90,7 @@ nav.cloud li {
 .about .tile {
   width: 45%;
   margin-right: 0px;
-  margin-bottom: 21px;
+  margin-bottom: 23px;
 }
 
 .about .last {
@@ -103,7 +103,7 @@ nav.cloud li {
   height: 50%;
   margin-right: 0px;
   margin-top: 19px;
-  margin-bottom: 21px;
+  margin-bottom:50px;
 }
 
 .strategy .tile p {
